<resources>
    <string name="app_name">login</string>
    <!-- String related with Home Login -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_tv_text">¡We welcome you to Mercado Pago!</string>
    <string name="login_bt_login">Login</string>
    <string name="login_bt_create" translatable="false">Create new account</string>
    <!-- String related with Login -->
    <string name="login_tv_enter_phone" translatable="false">Enter phone, email or username</string>
    <string name="login_tv_text_phone_2">Phone, email or username</string>
    <string name="login_bt_continue">Continue</string>
    <string name="login_tv_help">I need help to enter</string>
    <string name="login_tv_privacy">How we take care of your privacy</string>
    <string name="login_tv_copyright">copyright 1999-2023 <b>MercadoLibre S.R.L</b></string>
    <string name="login_tv_report">Report a problem</string>
    <string name="login_tv_stolen_phone">Stolen or lost phone</string>
    <string name="login_et_password">Password</string>
    <string name="login_et_user">User</string>
    <string name="login_et_email">Email</string>
    <string name="login_tv_help_report">¿Did you forget your password?</string>
    <string name="login_tv_sub_tittle_create">Create Account</string>
    <string name="login_tv_tittle_create">Enter your data</string>
    <string name="login_tv_or">OR</string>
    <string name="login_et_confirm_password">Confirm password</string>
    <string name="recover_tv_tittle">Enter Email to recover your password</string>
    <string name="reset_bt_recover">Reset your password</string>
    <string name="reset_tv_msg">You will receive an email with instructions on how to reset your password</string>
    <string name="item_disconnection">No internet connection</string>
    <string name="item_subtitle">There was a problem getting the data, please try again</string>
    <string name="item_retry">Retry</string>
    <string name="item_verify_tittle">"Verified account "</string>
    <string name="item_verify_subtitle">A verification email has been sent to recover your password</string>
    <string name="item_success_tittle">Account create</string>
    <string name="item_success_subtitle">"A verification email has been sent to enable your account "</string>
    <string name="item_error_login_subtitle">This account does not exist</string>
    <string name="item_error_login_subtitle2">Do you want to create an account?</string>
    <string name="item_bt_cancel">Cancel</string>
    <string name="help_tv_recover">Recover password</string>
    <string name="re_auth_tv_tittle">Use your fingerprint to verify your identity</string>
    <string name="login_tv_error_alert">message error</string>
    <string name="field_email_error">Email incorrect</string>
    <string name="field_pass_error">Password incorrect</string>
    <string name="field_user_error">User incorrect</string>
    <string name="show_error_app">error in the application</string>

    <!-- String related with Create -->


</resources>